opsætning af skelet igen

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/custom.css" />
   </head>
 
   <body>
@@ -31,16 +33,55 @@
     </header>
 
     <main>
-      <h1>Overskrift</h1>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus aut
-        ullam quaerat molestiae unde, tenetur nihil quo atque odio quisquam
-        veritatis illo voluptate saepe exercitationem vitae fuga! Iste, ut
-        consequatur?
-      </p>
-    </main>
+      <section class="hero">
+        <div class="hero-section">
+          <img src="" alt="billed af Mig" />
+        </div>
 
-    <script src="menu.js"></script>
+        <h1>Velkommen til min</h1>
+        <h1>Portfolio</h1>
+      </section>
+      <section>
+        <h2>Indhold af Portfolioen</h2>
+
+        <div>
+          <img src="" alt="" />
+        </div>
+
+        <h3>Hvad kan du finde på min portfolio</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi earum
+          autem, fuga praesentium reprehenderit dolore nobis vitae nesciunt
+          molestiae impedit ex ad voluptates error eveniet mollitia, ab
+          excepturi debitis incidunt.
+        </p>
+      </section>
+
+      <section>
+        <div><img src="" alt="" /></div>
+        <h2>Det Handler "Om Mig"</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+          voluptas velit at quae pariatur maiores rem quod, iure inventore
+          debitis neque, magni est modi, ratione ipsa atque nesciunt cum eius!
+        </p>
+      </section>
+      <section>
+        <h2>Mine Projekter</h2>
+        <section></section>
+        <button>Projekter</button>
+        <h3>Få et Indblik i hvad jeg har Lært</h3>
+      </section>
+    </main>
+    <footer>
+      <button><link rel="stylesheet" href="" />Email</button>
+      <button><link rel="stylesheet" href="" />Github</button>
+      <button><link rel="stylesheet" href="" />Linkin</button>
+
+      <p>Tag endelig fat i mig på disse platformer.</p>
+    </footer>
+
+    <script src="menu (1)/menu/menu.js"></script>
     <script src="js/cards.js"></script>
   </body>
 </html>
