--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 
   <body>
     <header>
-      <div class="logo">
+      <!-- <div class="logo">
         <a href="/">
           <img src="logo.webp" alt="" />
         </a>
-      </div>
+      </div> -->
       <nav>
         <ul class="menu">
-          <li><a href="index.html">Home</a></li>
           <li><a href="index.html">Om Mig</a></li>
           <li><a href="index.html">Projekter</a></li>
           <li><a href="index.html">kontakt Mig</a></li>
