ændre hero tilføjet fonts

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <main>
       <section class="hero">
         <div class="hero-section">
-          <img src="" alt="billed af Mig" />
+          <img src="img/billedemig.JPG" alt="billed af Mig" />
         </div>
 
-        <h1>Velkommen til min</h1>
+        <h1 class="samtekst">Velkommen til min</h1>
         <h1>Portfolio</h1>
       </section>
       <section>
