--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </h1>
         <h1>Portfolio</h1>
       </section>
-      <section class="bon">
+      <section class="bon hvid lys andenlys">
         <h2>Indhold af Portfolioen</h2>
 
         <div>
@@ -79,8 +79,8 @@
           debitis neque, magni est modi, ratione ipsa atque nesciunt cum eius!
         </p>
       </section>
-      <section>
-        <h2>Mine Projekter</h2>
+      <section class="bon hvid lys andenlys">
+        <h2 class="hvid">Mine Projekter</h2>
         <section></section>
         <button>Projekter</button>
         <h3>Få et Indblik i hvad jeg har Lært</h3>
