ændring på menu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,32 @@
         <a href="index.html">
           <div class="logo">
             <a href="index.html">
-              <!-- svg -->
+              <svg
+                width="175"
+                height="176"
+                viewBox="0 0 175 176"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M62.2109 60.4297H60.2188V108.047C60.2188 110.104 59.4115 111.823 57.7969 113.203C56.1042 114.661 53.9688 115.391 51.3906 115.391C48.8125 115.391 46.6901 114.661 45.0234 113.203C43.4089 111.823 42.6016 110.104 42.6016 108.047V98.2031H49.0078V111.094C49.0078 112.995 49.8021 113.945 51.3906 113.945C53.0052 113.945 53.8125 112.995 53.8125 111.094V60.4297H51.7812V58.9844H62.2109V60.4297ZM88.6328 115H78.2422V113.555H80.2344L78.7891 97.3047H73.0469L71.4453 113.555H73.4375V115H67.4219V113.555H69.4141L75.0391 58.9844H81.4453L86.6406 113.555H88.6328V115ZM78.7109 95.8984L76.0547 65.625L73.125 95.8984H78.7109ZM114.664 107.227C114.664 109.466 113.727 111.393 111.852 113.008C109.977 114.596 107.711 115.391 105.055 115.391C102.424 115.391 100.159 114.596 98.2578 113.008C96.3828 111.393 95.4453 109.466 95.4453 107.227V66.7578C95.4453 64.5182 96.3828 62.6042 98.2578 61.0156C100.159 59.401 102.424 58.5938 105.055 58.5938C107.711 58.5938 109.977 59.401 111.852 61.0156C113.727 62.6042 114.664 64.5182 114.664 66.7578V75.7812H108.258V63.2422C108.258 62.3568 107.945 61.6016 107.32 60.9766C106.695 60.3516 105.94 60.0391 105.055 60.0391C104.169 60.0391 103.414 60.3516 102.789 60.9766C102.164 61.6016 101.852 62.3568 101.852 63.2422V110.742C101.852 111.628 102.164 112.383 102.789 113.008C103.414 113.633 104.169 113.945 105.055 113.945C105.94 113.945 106.695 113.633 107.32 113.008C107.945 112.383 108.258 111.628 108.258 110.742V98.2031H114.664V107.227Z"
+                  fill="white"
+                />
+                <line
+                  x1="0.14569"
+                  y1="61.5217"
+                  x2="174.146"
+                  y2="114.522"
+                  stroke="white"
+                />
+                <line
+                  x1="29.1473"
+                  y1="61.5222"
+                  x2="149.147"
+                  y2="98.5222"
+                  stroke="white"
+                />
+              </svg>
             </a>
           </div>
         </a>
@@ -66,7 +91,7 @@
       <section class="bon hvid lys andenlys box01">
         <h1>Indhold af Portfolioen</h1>
 
-        <div>
+        <div class="forsidefoto">
           <img src="img/forsidefoto.png" alt="" />
         </div>
 
@@ -88,9 +113,6 @@
           debitis neque, magni est modi, ratione ipsa atque nesciunt cum eius!
         </p>
       </section>
-
-      <!-- <section class="bon hvid lys andenlys">
-        <h1 class="hvid">Mine Projekter</h1> -->
 
       <section class="bon hvid lys andenlys">
         <h1 class="hvid">Mine Projekter</h1>
@@ -132,10 +154,6 @@
         <button id="nextButton">Se Næste Projekt</button>
         <h3>Få et Indblik i hvad jeg har Lært</h3>
       </section>
-
-      <!-- <button>Projekter</button>
-        <h3>Få et Indblik i hvad jeg har Lært</h3>
-      </section> -->
     </main>
     <footer>
       <button><link rel="stylesheet" href="" />Email</button>
