--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </a>
       </div>
       <nav>
-        <ul class="menu">
+        <ul class="menu knapper">
           <li><a href="index.html">Om Mig</a></li>
           <li><a href="index.html">Projekter</a></li>
           <li><a href="index.html">kontakt Mig</a></li>
@@ -151,7 +151,7 @@
           </div>
         </div>
 
-        <button id="nextButton">Se Næste Projekt</button>
+        <button id="nextButton" class="knapper">Se Næste Projekt</button>
         <h3>Få et Indblik i hvad jeg har Lært</h3>
       </section>
     </main>
