knapper og billedet ændret

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       </div>
       <nav>
         <ul class="menu knapper">
-          <li><a href="index.html">Om Mig</a></li>
-          <li><a href="index.html">Projekter</a></li>
-          <li><a href="index.html">kontakt Mig</a></li>
+          <li><a href="aboutme.html">Om Mig</a></li>
+          <li><a href="projekt.html">Projekter</a></li>
+          <li><a href="index.html">Kontakt Mig</a></li>
         </ul>
         <button class="burger">
           <span class="line"></span>
@@ -90,18 +90,20 @@
 
       <section class="bon hvid lys andenlys box01">
         <h1>Indhold af Portfolioen</h1>
-
-        <div class="forsidefoto">
-          <img src="img/forsidefoto.png" alt="" />
+        <div class="grid_2-1">
+          <div class="forsidefoto">
+            <img src="img/forsidefoto.png" alt="" />
+          </div>
+          <div>
+            <h3>Hvad kan du finde på min portfolio</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi
+              earum autem, fuga praesentium reprehenderit dolore nobis vitae
+              nesciunt molestiae impedit ex ad voluptates error eveniet
+              mollitia, ab excepturi debitis incidunt.
+            </p>
+          </div>
         </div>
-
-        <h3>Hvad kan du finde på min portfolio</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi earum
-          autem, fuga praesentium reprehenderit dolore nobis vitae nesciunt
-          molestiae impedit ex ad voluptates error eveniet mollitia, ab
-          excepturi debitis incidunt.
-        </p>
       </section>
 
       <section>
@@ -151,7 +153,7 @@
           </div>
         </div>
 
-        <button id="nextButton" class="knapper">Se Næste Projekt</button>
+        <button id="nextButton">Se Næste Projekt</button>
         <h3>Få et Indblik i hvad jeg har Lært</h3>
       </section>
     </main>
