lavet nyr mapper til anden html startet ny branch

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/general.css" />
-    <link rel="stylesheet" href="css/custom.css" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/cards.css" />
+    <link rel="stylesheet" href="css_forside/style.css" />
+    <link rel="stylesheet" href="css_forside/general.css" />
+    <link rel="stylesheet" href="css_forside/custom.css" />
+    <link rel="stylesheet" href="css_forside/fonts.css" />
+    <link rel="stylesheet" href="css_forside/cards.css" />
   </head>
 
   <body>
@@ -100,7 +100,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi
               earum autem, fuga praesentium reprehenderit dolore nobis vitae
               nesciunt molestiae impedit ex ad voluptates error eveniet
-              mollitia, ab excepturi debitis incidunt.
+              mollitia, ab excepturi debitis incidun.
             </p>
           </div>
         </div>
