--- a/aboutme.html
+++ b/aboutme.html
@@ -89,7 +89,7 @@
       </section>
 
       <section class="bon hvid lys andenlys box01">
-        <h1>Indhold af Portfolioen</h1>
+        <h1>Hvem er den pige?</h1>
         <div class="grid_2-1">
           <div class="forsidefoto">
             <img src="img/forsidefoto.png" alt="" />
