tilføjet ny svg og lavet kopi

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Om Mig</title>
-    <link rel="stylesheet" href="css_forside/style.css" />
-    <link rel="stylesheet" href="css_forside/general.css" />
-    <link rel="stylesheet" href="css_forside/custom.css" />
-    <link rel="stylesheet" href="css_forside/fonts.css" />
-    <link rel="stylesheet" href="css_forside/cards.css" />
+    <link rel="stylesheet" href="css_aboutme/style.css" />
+    <link rel="stylesheet" href="css_aboutme/general.css" />
+    <link rel="stylesheet" href="css_aboutme/custom.css" />
+    <link rel="stylesheet" href="css_aboutme/fonts.css" />
+    <link rel="stylesheet" href="css_aboutme/cards.css" />
   </head>
 
   <body>
@@ -92,7 +92,7 @@
         <h1>Hvem er den pige?</h1>
         <div class="grid_2-1">
           <div class="forsidefoto">
-            <img src="img/forsidefoto.png" alt="" />
+            <img src="img/miggalleri.png" alt="" />
           </div>
           <div>
             <h3>Hvad kan du finde på min portfolio</h3>
