tilføjet billeder ændret billeder

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </section>
 
       <section>
-        <div><img src="" alt="" /></div>
+        <div class="box02"><img src="img/ommigkam.gif" alt="" /></div>
         <h1>Det Handler "Om Mig"</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
