oprettet ny css og ændret struktur opsætning af hover billeder

--- a/projekt.html
+++ b/projekt.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Om Mig</title>
-    <link rel="stylesheet" href="css_aboutme/style.css" />
-    <link rel="stylesheet" href="css_aboutme/general.css" />
+    <link rel="stylesheet" href="css_projekter/style.css" />
+    <link rel="stylesheet" href="css_projekter/general.css" />
+    <link rel="stylesheet" href="css_projekter/layout.css" />
+    <link rel="stylesheet" href="css_projekter/galleri.css" />
     <!-- <link rel="stylesheet" href="css_aboutme/custom.css" /> -->
     <!-- <link rel="stylesheet" href="css_aboutme/fonts.css" /> -->
     <!-- <link rel="stylesheet" href="css_aboutme/cards.css" /> -->
@@ -48,34 +50,127 @@
         </h1>
       </section>
 
-      <section class="bon hvid lys andenlys box01">
-        <h1>Hvem er den pige?</h1>
-        <div class="grid_2-1">
-          <div class="forsidefoto">
-            <img src="img/miggalleri.png" alt="" />
-          </div>
-          <div>
-            <h3>Hvad kan du finde på min portfolio</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi
-              earum autem, fuga praesentium reprehenderit dolore nobis vitae
-              nesciunt molestiae impedit ex ad voluptates error eveniet
-              mollitia, ab excepturi debitis incidunt. Lorem ipsum dolor sit
-              amet, consectetur adipisicing elit. Saepe quam facilis velit
-              placeat exercitationem iure eaque. Voluptates consequuntur atque
-              earum doloremque minus natus, hic dolores magni, optio facere
-              possimus est!
-            </p>
+      <section class="projekt-section">
+        <h1>Mine Projekter</h1>
+
+        <div class="projekt-grid">
+          <!-- intro -->
+          <div class="projekt-item">
+            <img src="img/projekt1.jpg" alt="Introuge" />
+            <div class="projekt-overlay">
+              <div class="projekt-header">
+                <div class="projekt-titel">INTROUGE</div>
+              </div>
+              <div class="projekt-content">
+                <div class="projekt-undertitel">Første Link</div>
+                <div class="projekt-undertitel">Første Video</div>
+                <div class="projekt-undertitel">Første Kort</div>
+              </div>
+              <div class="projekt-footer">
+                <div class="projekt-tema">TEMA 1</div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="grid_2-1">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi earum
-            autem, fuga praesentium reprehenderit dolore nobis vitae nesciunt
-            molestiae impedit ex ad voluptates error eveniet mollitia, ab
-            excepturi debitis incidunt.
-          </p>
-          <div class="box02"><img src="img/ommigkam.gif" alt="" /></div>
+
+        <div class="projekt-grid">
+          <!-- første web -->
+          <div class="projekt-item">
+            <img src="img/projekt1.jpg" alt="første web" />
+            <div class="projekt-overlay">
+              <div class="projekt-header">
+                <div class="projekt-titel">Mobilsite og Website</div>
+              </div>
+              <div class="projekt-content">
+                <div class="projekt-undertitel">
+                  Første hele kodet Hjemmeside
+                </div>
+              </div>
+              <div class="projekt-footer">
+                <div class="projekt-tema">TEMA 2</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="projekt-grid">
+          <!-- valgfrit emne -->
+          <div class="projekt-item">
+            <img src="img/projekt1.jpg" alt="emneside" />
+            <div class="projekt-overlay">
+              <div class="projekt-header">
+                <div class="projekt-titel">Emnesite</div>
+              </div>
+              <div class="projekt-content">
+                <div class="projekt-undertitel">
+                  Mit eget website valgfrit emne
+                </div>
+              </div>
+              <div class="projekt-footer">
+                <div class="projekt-tema">TEMA 3</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="projekt-grid">
+          <!-- nødsituation med løsning-->
+          <div class="projekt-item">
+            <img src="img/projekt1.jpg" alt="Nødsituation" />
+            <div class="projekt-overlay">
+              <div class="projekt-header">
+                <div class="projekt-titel">Emergencysite</div>
+              </div>
+              <div class="projekt-content">
+                <div class="projekt-undertitel">
+                  En Nødsituation En unik løsning
+                </div>
+              </div>
+              <div class="projekt-footer">
+                <div class="projekt-tema">TEMA 4</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="projekt-grid">
+          <!-- to forskellige emner -->
+          <div class="projekt-item">
+            <img src="img/projekt1.jpg" alt="to emner" />
+            <div class="projekt-overlay">
+              <div class="projekt-header">
+                <div class="projekt-titel">
+                  Sandkassesite og Virksomhedssite
+                </div>
+              </div>
+              <div class="projekt-content">
+                <div class="projekt-undertitel">
+                  Redesign & Fokus på Indhold
+                </div>
+              </div>
+              <div class="projekt-footer">
+                <div class="projekt-tema">TEMA 5</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="projekt-grid">
+          <!-- portfolio, når den er færdig eller andet -->
+          <div class="projekt-item">
+            <img src="img/projekt1.jpg" alt="portfolio" />
+            <div class="projekt-overlay">
+              <div class="projekt-header">
+                <div class="projekt-titel">Kommer Snart...</div>
+              </div>
+              <div class="projekt-content">
+                <div class="projekt-undertitel">Portfolio</div>
+              </div>
+              <div class="projekt-footer">
+                <div class="projekt-tema">TEMA 6</div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -102,40 +197,6 @@
 
       <section class="bon hvid lys andenlys">
         <h1 class="hvid">Mine Projekter</h1>
-
-        <div class="card-container">
-          <div class="card">
-            <span class="card-number">01</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 1" />
-            <div class="card-description">
-              Min første webside med HTML og CSS
-            </div>
-          </div>
-          <div class="card">
-            <span class="card-number">02</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 2" />
-            <div class="card-description">JavaScript calculator app</div>
-          </div>
-          <div class="card">
-            <span class="card-number">03</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 3" />
-            <div class="card-description">Responsivt design til mobil</div>
-          </div>
-          <div class="card">
-            <span class="card-number">04</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 4" />
-            <div class="card-description">
-              Portfolio website med animationer
-            </div>
-          </div>
-          <div class="card">
-            <span class="card-number">05</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 5" />
-            <div class="card-description">
-              E-commerce side med shopping cart
-            </div>
-          </div>
-        </div>
 
         <button id="nextButton">Se Næste Projekt</button>
         <h3>Få et Indblik i hvad jeg har Lært</h3>
