ændret hero og placering af projekter

--- a/projekt.html
+++ b/projekt.html
@@ -42,7 +42,7 @@
     <main>
       <section class="hero">
         <div class="hero-section">
-          <img src="img/ommigbillede03.jpg" alt="billed af Mig" />
+          <img src="img/projekthero.png" alt="billed af Mig" />
         </div>
 
         <h1>
@@ -71,9 +71,6 @@
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="projekt-grid">
           <!-- første web -->
           <div class="projekt-item">
             <img src="img/projekt1.jpg" alt="første web" />
@@ -91,9 +88,6 @@
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="projekt-grid">
           <!-- valgfrit emne -->
           <div class="projekt-item">
             <img src="img/projekt1.jpg" alt="emneside" />
@@ -131,9 +125,6 @@
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="projekt-grid">
           <!-- to forskellige emner -->
           <div class="projekt-item">
             <img src="img/projekt1.jpg" alt="to emner" />
@@ -153,9 +144,6 @@
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="projekt-grid">
           <!-- portfolio, når den er færdig eller andet -->
           <div class="projekt-item">
             <img src="img/projekt1.jpg" alt="portfolio" />
