ændret fotos i projekt

--- a/projekt.html
+++ b/projekt.html
@@ -56,7 +56,7 @@
         <div class="projekt-grid">
           <!-- intro -->
           <div class="projekt-item">
-            <img src="img/projekt1.jpg" alt="Introuge" />
+            <img src="img/Group 6.png" alt="Introuge" />
             <div class="projekt-overlay">
               <div class="projekt-header">
                 <div class="projekt-titel">INTROUGE</div>
@@ -73,7 +73,10 @@
           </div>
           <!-- første web -->
           <div class="projekt-item">
-            <img src="img/projekt1.jpg" alt="første web" />
+            <img
+              src="img/justy488.github.io_website_ (1).png"
+              alt="første web"
+            />
             <div class="projekt-overlay">
               <div class="projekt-header">
                 <div class="projekt-titel">Mobilsite og Website</div>
@@ -90,7 +93,10 @@
           </div>
           <!-- valgfrit emne -->
           <div class="projekt-item">
-            <img src="img/projekt1.jpg" alt="emneside" />
+            <img
+              src="img/justy488.github.io_emnesite_ (3).png"
+              alt="emneside"
+            />
             <div class="projekt-overlay">
               <div class="projekt-header">
                 <div class="projekt-titel">Emnesite</div>
@@ -110,7 +116,10 @@
         <div class="projekt-grid">
           <!-- nødsituation med løsning-->
           <div class="projekt-item">
-            <img src="img/projekt1.jpg" alt="Nødsituation" />
+            <img
+              src="img/justy488.github.io_parallelunivers-main_.png"
+              alt="Nødsituation"
+            />
             <div class="projekt-overlay">
               <div class="projekt-header">
                 <div class="projekt-titel">Emergencysite</div>
@@ -127,7 +136,10 @@
           </div>
           <!-- to forskellige emner -->
           <div class="projekt-item">
-            <img src="img/projekt1.jpg" alt="to emner" />
+            <img
+              src="img/justy488.github.io_tema-5_part2_.png"
+              alt="to emner"
+            />
             <div class="projekt-overlay">
               <div class="projekt-header">
                 <div class="projekt-titel">
