--- a/projekt.html
+++ b/projekt.html
@@ -56,7 +56,7 @@
         <div class="projekt-grid">
           <!-- intro -->
           <div class="projekt-item">
-            <img src="img/Group 6.png" alt="Introuge" />
+            <img src="img/introuge.png" alt="Introuge" />
             <div class="projekt-overlay">
               <div class="projekt-header">
                 <div class="projekt-titel">INTROUGE</div>
@@ -136,10 +136,7 @@
           </div>
           <!-- to forskellige emner -->
           <div class="projekt-item">
-            <img
-              src="img/justy488.github.io_tema-5_part2_.png"
-              alt="to emner"
-            />
+            <img src="img/toemner04.png" alt="to emner" />
             <div class="projekt-overlay">
               <div class="projekt-header">
                 <div class="projekt-titel">
@@ -158,7 +155,7 @@
           </div>
           <!-- portfolio, når den er færdig eller andet -->
           <div class="projekt-item">
-            <img src="img/projekt1.jpg" alt="portfolio" />
+            <img src="img/sort.png" alt="portfolio" />
             <div class="projekt-overlay">
               <div class="projekt-header">
                 <div class="projekt-titel">Kommer Snart...</div>
