tilføjet og fjernet billeder erstattet projekt siden

--- a/projekt.html
+++ b/projekt.html
@@ -55,7 +55,7 @@
 
         <div class="projekt-grid">
           <!-- intro -->
-          <div class="projekt-item">
+          <a href="#introuge-section" class="projekt-item">
             <img src="img/introuge.png" alt="Introuge" />
             <div class="projekt-overlay">
               <div class="projekt-header">
@@ -70,9 +70,10 @@
                 <div class="projekt-tema">TEMA 1</div>
               </div>
             </div>
-          </div>
+          </a>
+
           <!-- første web -->
-          <div class="projekt-item">
+          <a href="#mobilsite-section" class="projekt-item">
             <img
               src="img/justy488.github.io_website_ (1).png"
               alt="første web"
@@ -90,9 +91,10 @@
                 <div class="projekt-tema">TEMA 2</div>
               </div>
             </div>
-          </div>
+          </a>
+
           <!-- valgfrit emne -->
-          <div class="projekt-item">
+          <a href="#emnesite-section" class="projekt-item">
             <img
               src="img/justy488.github.io_emnesite_ (3).png"
               alt="emneside"
@@ -110,12 +112,12 @@
                 <div class="projekt-tema">TEMA 3</div>
               </div>
             </div>
-          </div>
+          </a>
         </div>
 
         <div class="projekt-grid">
           <!-- nødsituation med løsning-->
-          <div class="projekt-item">
+          <a href="#emergency-section" class="projekt-item">
             <img
               src="img/justy488.github.io_parallelunivers-main_.png"
               alt="Nødsituation"
@@ -133,9 +135,10 @@
                 <div class="projekt-tema">TEMA 4</div>
               </div>
             </div>
-          </div>
+          </a>
+
           <!-- to forskellige emner -->
-          <div class="projekt-item">
+          <a href="#toemner-section" class="projekt-item">
             <img src="img/toemner04.png" alt="to emner" />
             <div class="projekt-overlay">
               <div class="projekt-header">
@@ -152,9 +155,10 @@
                 <div class="projekt-tema">TEMA 5</div>
               </div>
             </div>
-          </div>
-          <!-- portfolio, når den er færdig eller andet -->
-          <div class="projekt-item">
+          </a>
+
+          <!-- min portfolio, når den er færdig eller andet -->
+          <a href="#portfolio-section" class="projekt-item">
             <img src="img/sort.png" alt="portfolio" />
             <div class="projekt-overlay">
               <div class="projekt-header">
@@ -167,28 +171,193 @@
                 <div class="projekt-tema">TEMA 6</div>
               </div>
             </div>
+          </a>
+        </div>
+      </section>
+
+      <!-- Tema beskrivelsen,  proces løsning, input -->
+      <!-- TEMA 1: INTROUGE -->
+      <section id="introuge-section" class="projekt-detail bon">
+        <div class="container">
+          <h1>INTROUGE</h1>
+          <h3>Tema 1 - Første Link, Første Video, Første Kort</h3>
+
+          <div class="grid_2-1">
+            <div class="forsidefoto">
+              <img src="img/introuge.png" alt="Introuge projekt" />
+              <div class="forsidefoto">
+                <img src="img/introuge04.png" alt="Introuge projekt" />
+              </div>
+            </div>
+            <div>
+              <p>
+                I dette projekt lærte jeg grundlæggende om webdesign og digital
+                formidling. Jeg arbejdede med at skabe links, videoindhold og
+                visuelle kort som introducerede mig til multimediets muligheder.
+              </p>
+              <p>
+                Projektet var mit første møde med det kreative digitale univers,
+                hvor jeg eksperimenterede med forskellige formidlingsformer og
+                lærte at kombinere tekst, billeder og video.
+              </p>
+
+              <a href="#" class="tilbage-link">← Tilbage til projekter</a>
+              <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
+                >Se Projektet</a
+              >
+            </div>
           </div>
         </div>
       </section>
 
-      <section class="hvid-baggrund">
-        <div><img src="" alt="" /></div>
-        <h1>Det Handler "Om Mig"</h1>
-        <div class="grid_2-1">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-            voluptas velit at quae pariatur maiores rem quod, iure inventore
-            debitis neque, magni est modi, ratione ipsa atque nesciunt cum eius!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-            nam, quod earum facere, error quibusdam ipsa aperiam repellendus
-            quam perferendis at quas voluptas minima quis animi dignissimos
-            excepturi tenetur reiciendis! Sequi reprehenderit repellat iure
-            molestias impedit eligendi beatae voluptate veniam, natus inventore
-            eius voluptatibus sapiente cum, illo hic reiciendis aliquam
-            perspiciatis ratione itaque necessitatibus earum quas non ad
-            tenetur? Hic.
-          </p>
-          <div class="box03"><img src="img/polaroid01.jpg" alt="" /></div>
+      <!-- mobil og web sektion -->
+      <section id="mobilsite-section" class="projekt-detail hvid-baggrund">
+        <div class="container">
+          <h1>Mobilsite og Website</h1>
+          <h3>Tema 2 - Første hele kodet Hjemmeside</h3>
+
+          <div class="grid_2-1">
+            <div>
+              <p>
+                Dette var min første fuldstændigt kodet hjemmeside fra bunden.
+                Jeg arbejdede med HTML, CSS og responsivt design for at sikre,
+                at sitet fungerede godt på både mobil og desktop.
+              </p>
+              <p>
+                Gennem dette projekt lærte jeg om semantisk HTML, CSS-layouts og
+                vigtigheden af brugeroplevelse på tværs af forskellige enheder.
+              </p>
+
+              <div class="forsidefoto">
+                <img src="img/førsteweb04.png" alt="Introuge projekt" />
+              </div>
+              <a href="#" class="tilbage-link">← Tilbage til projekter</a>
+              <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
+                >Se Projektet</a
+              >
+            </div>
+            <div class="forsidefoto">
+              <img src="img/førsteweb03.png" alt="Mobilsite projekt" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- emnesite sektion -->
+      <section id="emnesite-section" class="projekt-detail bon">
+        <div class="container">
+          <h1>Emnesite</h1>
+          <h3>Tema 3 - Mit eget website valgfrit emne</h3>
+
+          <div class="grid_2-1">
+            <div class="forsidefoto">
+              <img src="img/emnesite01.png" alt="Emnesite projekt" />
+            </div>
+            <div>
+              <p>
+                I dette projekt fik jeg frihed til at vælge et emne, der
+                interesserede mig, og bygge et website omkring det. Dette gav
+                mig mulighed for at kombinere min passion med mine tekniske
+                færdigheder.
+              </p>
+              <p>
+                Jeg fokuserede på at skabe en sammenhængende brugeroplevelse med
+                gennemtænkt informationsarkitektur og visuelt design, der
+                understøttede emnets budskab.
+              </p>
+              <div class="forsidefoto">
+                <img src="img/emnesite02.png" alt="Emnesite projekt" />
+              </div>
+            </div>
+          </div>
+
+          <a href="#" class="tilbage-link">← Tilbage til projekter</a>
+        </div>
+      </section>
+
+      <!-- emergency sektion -->
+      <section id="emergency-section" class="projekt-detail hvid-baggrund">
+        <div class="container">
+          <h1>Emergencysite</h1>
+          <h3>Tema 4 - En Nødsituation En unik løsning</h3>
+
+          <div class="grid_2-1">
+            <div>
+              <p>
+                Dette projekt udfordrede mig til at designe en løsning til en
+                nødsituation. Jeg arbejdede med brugercentreret design og skulle
+                sikre, at informationen var klar, tilgængelig og handlekraftig.
+              </p>
+              <p>
+                Fokus var på at skabe et intuitivt interface, der kunne hjælpe
+                brugere i pressede situationer med at finde den information, de
+                havde brug for, hurtigt og effektivt.
+              </p>
+              <div class="forsidefoto">
+                <img src="img/emergency02.png" alt="Emergency projekt" />
+              </div>
+            </div>
+
+            <div class="forsidefoto">
+              <img src="img/emergency03.png" alt="Emergency projekt" />
+            </div>
+          </div>
+
+          <a href="#" class="tilbage-link">← Tilbage til projekter</a>
+        </div>
+      </section>
+
+      <!-- sandkasse og virksomheds sektion -->
+      <section id="toemner-section" class="projekt-detail bon">
+        <div class="container">
+          <h1>Sandkassesite og Virksomhedssite</h1>
+          <h3>Tema 5 - Redesign & Fokus på Indhold</h3>
+
+          <div class="grid_2-1">
+            <div class="forsidefoto">
+              <img src="img/sandogvirksom01.png" alt="To emner projekt" />
+            </div>
+            <div>
+              <p>
+                I dette tema arbejdede jeg med to forskellige projekter: et
+                eksperimentelt sandkassesite og et professionelt
+                virksomhedssite. Begge med fokus på redesign og
+                indholdsstrategi.
+              </p>
+              <p>
+                Jeg lærte om vigtigheden af at tilpasse design og indhold til
+                forskellige målgrupper og formål, samt hvordan man balancerer
+                kreativitet med professionelle standarder.
+              </p>
+              <div class="forsidefoto">
+                <img src="img/toemnerproces01.png" alt="To emner projekt" />
+              </div>
+            </div>
+          </div>
+
+          <a href="#" class="tilbage-link">← Tilbage til projekter</a>
+        </div>
+      </section>
+
+      <!-- til min portfolio -->
+      <section id="portfolio-section" class="projekt-detail hvid-baggrund">
+        <div class="container">
+          <h1>Portfolio</h1>
+          <h3>Tema 6 - Kommer Snart...</h3>
+
+          <div>
+            <p>
+              Dette projekt er under udvikling. Her vil jeg samle alle mine
+              projekter i en sammenhængende portfolio, der viser min udvikling
+              som webudvikler og designer.
+            </p>
+            <p>
+              Portfolioen vil indeholde refleksioner over mine læreprocesser,
+              tekniske færdigheder og kreative tilgang til problemløsning.
+            </p>
+          </div>
+
+          <a href="#" class="tilbage-link">← Tilbage til projekter</a>
         </div>
       </section>
 
