--- a/projekt.html
+++ b/projekt.html
@@ -276,7 +276,10 @@
       </section>
 
       <!-- emergency sektion -->
-      <section id="emergency-section" class="projekt-detail hvid-baggrund">
+      <section
+        id="emergency-section"
+        class="projekt-detail hvid-baggrund whitebox"
+      >
         <div class="container">
           <h1>Emergencysite</h1>
           <h3>Tema 4 - En Nødsituation En unik løsning</h3>
@@ -340,7 +343,10 @@
       </section>
 
       <!-- til min portfolio -->
-      <section id="portfolio-section" class="projekt-detail hvid-baggrund">
+      <section
+        id="portfolio-section"
+        class="projekt-detail hvid-baggrund whitebox"
+      >
         <div class="container">
           <h1>Portfolio</h1>
           <h3>Tema 6 - Kommer Snart...</h3>
@@ -355,9 +361,8 @@
               Portfolioen vil indeholde refleksioner over mine læreprocesser,
               tekniske færdigheder og kreative tilgang til problemløsning.
             </p>
+            <a href="#" class="tilbage-link">← Tilbage til projekter</a>
           </div>
-
-          <a href="#" class="tilbage-link">← Tilbage til projekter</a>
         </div>
       </section>
 
