--- a/projekt.html
+++ b/projekt.html
@@ -14,7 +14,8 @@
     <!-- <link rel="stylesheet" href="css_aboutme/cards.css" /> -->
   </head>
 
-  <body>
+  <body id="top">
+    <!-- har tilføjet et id top, så man kommer tilbage til toppen fra en anden sektion.  -->
     <header>
       <div class="logo">
         <a href="index.html">
@@ -201,7 +202,7 @@
                 lærte at kombinere tekst, billeder og video.
               </p>
 
-              <a href="#" class="tilbage-link">← Tilbage til projekter</a>
+              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
               <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
                 >Se Projektet</a
               >
@@ -214,7 +215,7 @@
       <section id="mobilsite-section" class="projekt-detail hvid-baggrund">
         <div class="container">
           <h1>Mobilsite og Website</h1>
-          <h3>Tema 2 - Første hele kodet Hjemmeside</h3>
+          <h3 class="whitebox">Tema 2 - Første hele kodet Hjemmeside</h3>
 
           <div class="grid_2-1">
             <div>
@@ -231,7 +232,7 @@
               <div class="forsidefoto">
                 <img src="img/førsteweb04.png" alt="Introuge projekt" />
               </div>
-              <a href="#" class="tilbage-link">← Tilbage til projekter</a>
+              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
               <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
                 >Se Projektet</a
               >
@@ -268,10 +269,9 @@
               <div class="forsidefoto">
                 <img src="img/emnesite02.png" alt="Emnesite projekt" />
               </div>
+              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
             </div>
           </div>
-
-          <a href="#" class="tilbage-link">← Tilbage til projekter</a>
         </div>
       </section>
 
@@ -299,14 +299,13 @@
               <div class="forsidefoto">
                 <img src="img/emergency02.png" alt="Emergency projekt" />
               </div>
+              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
             </div>
 
             <div class="forsidefoto">
               <img src="img/emergency03.png" alt="Emergency projekt" />
             </div>
           </div>
-
-          <a href="#" class="tilbage-link">← Tilbage til projekter</a>
         </div>
       </section>
 
@@ -335,10 +334,9 @@
               <div class="forsidefoto">
                 <img src="img/toemnerproces01.png" alt="To emner projekt" />
               </div>
+              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
             </div>
           </div>
-
-          <a href="#" class="tilbage-link">← Tilbage til projekter</a>
         </div>
       </section>
 
@@ -360,8 +358,8 @@
             <p>
               Portfolioen vil indeholde refleksioner over mine læreprocesser,
               tekniske færdigheder og kreative tilgang til problemløsning.
+              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
             </p>
-            <a href="#" class="tilbage-link">← Tilbage til projekter</a>
           </div>
         </div>
       </section>
